DERBY-6945: Make it possible to run some Derby tests using the module path; commit derby-6945-49-aa-runSomeTestsWithModulePath.diff.
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1839878 13f79535-47bb-0310-9956-ffa450edef68